First idea of the homepage

--- a/PersonalDevelopmentAssistant/PersonalDevelopmentAssistant.Client/Pages/Home.razor
+++ b/PersonalDevelopmentAssistant/PersonalDevelopmentAssistant.Client/Pages/Home.razor
@@ -2,7 +2,43 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Improve in any areas of your life!</h1>
 
-Welcome to your new app.
+Indicate the rating in belowing fields:
 
+<div class = "mt-3 mx-5 p-5 border border-5 border-rounded-5">
+    <ul>
+        <li>
+            <label for="customRange" class="form-label">Phisical condition & health</label>
+            <input type="range" class="form-range" min="1" max="10" step="1" id="customRange">
+        </li>
+        <li>
+            <label for="customRange" class="form-label">Career growth</label>
+            <input type="range" class="form-range" min="1" max="10" step="1" id="customRange">
+        </li>
+        <li>
+            <label for="customRange" class="form-label">Money & finances</label>
+            <input type="range" class="form-range" min="1" max="10" step="1" id="customRange">
+        </li>
+        <li>
+            <label for="customRange" class="form-label">Family & Relationships</label>
+            <input type="range" class="form-range" min="1" max="10" step="1" id="customRange">
+        </li>
+        <li>
+            <label for="customRange" class="form-label">Environment</label>
+            <input type="range" class="form-range" min="1" max="10" step="1" id="customRange">
+        </li>
+        <li>
+            <label for="customRange" class="form-label">Mental & personal growth</label>
+            <input type="range" class="form-range" min="1" max="10" step="1" id="customRange">
+        </li>
+        <li>
+            <label for="customRange" class="form-label">Freetime & entertainment</label>
+            <input type="range" class="form-range" min="1" max="10" step="1" id="customRange">
+        </li>
+        <li>
+            <label for="customRange" class="form-label">Spouse & love relationship</label>
+            <input type="range" class="form-range" min="1" max="10" step="1" id="customRange">
+        </li>
+    </ul>
+</div>
