Added some razor page.

--- a/PersonalDevelopmentAssistant/PersonalDevelopmentAssistant/Components/_Imports.razor
+++ b/PersonalDevelopmentAssistant/PersonalDevelopmentAssistant/Components/_Imports.razor
@@ -10,3 +10,7 @@
 @using PersonalDevelopmentAssistant
 @using PersonalDevelopmentAssistant.Client
 @using PersonalDevelopmentAssistant.Components
+@using PersonalDevelopmentAssistant.Services
+@using PersonalDevelopmentAssistant.Entities
+
+
