--- a/eCommerceApp/eCommerceApp.WebUI/eCommerceApp.WebUI/Components/Pages/LearnBlazor/BindProp.razor
+++ b/eCommerceApp/eCommerceApp.WebUI/eCommerceApp.WebUI/Components/Pages/LearnBlazor/BindProp.razor
@@ -1,14 +1,43 @@
 ﻿@page "/learnBlazor/bindProp"
+@rendermode InteractiveServer
 
 <h3>Product</h3>
 Name: @Product.Name <br />
 Active: @Product.IsActive <br />
+Price: @Product.Price <br/>
+This Product is: @(Product.IsActive ? "Active" : "InActive") <br />
+Property Selected: @_selectedProp <br />
+@if (!String.IsNullOrEmpty(_selectedProp))
+{
+    <p> Property Value: @Product.ProductProperties.FirstOrDefault(p => p.Key == _selectedProp).Value </p>
+}
+<br />
+
+Active:<input type="checkbox" @bind-value="@Product.IsActive" checked="@(Product.IsActive?"checked":null)" /><br />
+Price:<input type="number" @bind="@Product.Price" @bind:event="oninput" /> <br />
+Product Properties:
+<select @bind = "_selectedProp" >
+    @foreach (var prop in Product.ProductProperties)
+    {
+        <option value="@prop.Key"> @prop.Key </option>
+    }
+</select>
+
 
 @code {
-    eCommerceApp.Domain.LearnBlazorModels.Demo_Product Product = new()
+    private string _selectedProp = "";
+
+    Demo_Product Product = new()
         {
             Id = 1,
             Name = "Rose Candle",
             IsActive = true,
+            Price = 10.99,
+            ProductProperties = new List<Demo_ProductProp>()
+            {
+                new Demo_ProductProp(){Id = 1, Key = "Color", Value= "Black"},
+                new Demo_ProductProp(){Id = 2, Key = "Flavor", Value= "Rose Jasmine"},
+                new Demo_ProductProp(){Id = 3, Key = "Size", Value= "20oz"}
+            }
         };
 }
