--- a/eCommerceApp/eCommerceApp.WebUI/eCommerceApp.WebUI/Components/Pages/LearnBlazor/BindProp.razor
+++ b/eCommerceApp/eCommerceApp.WebUI/eCommerceApp.WebUI/Components/Pages/LearnBlazor/BindProp.razor
@@ -1,27 +1,72 @@
 ﻿@page "/learnBlazor/bindProp"
 @rendermode InteractiveServer
 
-<h3>Product</h3>
-Name: @Product.Name <br />
-Active: @Product.IsActive <br />
-Price: @Product.Price <br/>
-This Product is: @(Product.IsActive ? "Active" : "InActive") <br />
-Property Selected: @_selectedProp <br />
-@if (!String.IsNullOrEmpty(_selectedProp))
-{
-    <p> Property Value: @Product.ProductProperties.FirstOrDefault(p => p.Key == _selectedProp).Value </p>
-}
-<br />
+<h2 class="text-success">Individual Product</h2>
+<div class="row">
+    <div class="col-6 border p-3">
+        <h3 class="text-primary">Product Playground</h3><hr />
+        <div>
+            Active:<input type="checkbox" @bind-value="@Product.IsActive" checked="@(Product.IsActive?"checked":null)" /><br />
+        </div>
+        <div>
+            Price:<input type="number" @bind="@Product.Price" @bind:event="oninput" /> <br />
+        </div>
+        <div>
+            Product Properties:
+            <select @bind="_selectedProp">
+                @foreach (var prop in Product.ProductProperties)
+                {
+                    <option value="@prop.Key"> @prop.Key </option>
+                }
+            </select>
+        </div>
+    </div>
 
-Active:<input type="checkbox" @bind-value="@Product.IsActive" checked="@(Product.IsActive?"checked":null)" /><br />
-Price:<input type="number" @bind="@Product.Price" @bind:event="oninput" /> <br />
-Product Properties:
-<select @bind = "_selectedProp" >
-    @foreach (var prop in Product.ProductProperties)
+    <div class="col-6 border p-3">
+        <h3 class="text-primary">Product Summary</h3> <hr />
+        Name: @Product.Name <br />
+        Active: @Product.IsActive <br />
+        Price: @Product.Price <br />
+        This Product is: @(Product.IsActive ? "Active" : "InActive") <br />
+        Property Selected: @_selectedProp <br />
+        @if (!String.IsNullOrEmpty(_selectedProp))
+        {
+            <p> Property Value: @Product.ProductProperties.FirstOrDefault(p => p.Key == _selectedProp).Value </p>
+        }
+    </div>
+    <br />
+</div>
+<div class= "row my-5">
+    <h2 class="text-success">Product Table</h2>
+    <div class = "col-10 p-2">
+        <table class="g-2">
+            @foreach (var product in Products)
+            {
+                <tr>
+                    <td>
+                        <input @bind-value="@product.Name" @bind-value:event="oninput" />
+                    </td>
+                    <td>
+                        <input type="number" @bind-value="@product.Price" @bind-value:event="oninput" />
+                    </td>
+                    <td>
+                        <input type="checkbox" @bind-value="@product.IsActive" checked="@(product.IsActive?"checked":null)" />
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
+</div>
+<div class= "row my-5">
+    <h2 class="text-black">Product Summary</h2>
+    @foreach(var product in Products)
     {
-        <option value="@prop.Key"> @prop.Key </option>
+        <p>
+            @product.Name @product.Price @(product.IsActive?"Is Active":"Is Inactive")
+        </p>
     }
-</select>
+
+</div>
 
 
 @code {
@@ -40,4 +85,37 @@ Product Properties:
                 new Demo_ProductProp(){Id = 3, Key = "Size", Value= "20oz"}
             }
         };
+
+    List<Demo_Product> Products = new();
+
+    protected override void OnInitialized()
+    {
+        Products.Add(new()
+            {
+                Id = 1,
+                Name = "Midnight Blaze",
+                IsActive = false,
+                Price = 14.99,
+                ProductProperties = new()
+                {
+                new Demo_ProductProp { Id = 1, Key = "Flavor", Value = "Rose"},
+                     new Demo_ProductProp { Id = 2, Key = "Size", Value = "20oz"},
+                    new Demo_ProductProp { Id = 3, Key = "Color", Value="Purple" }
+                }
+            });
+
+        Products.Add(new()
+            {
+                Id = 2,
+                Name = "Blossom Lily",
+                IsActive = true,
+                Price = 12.99,
+                ProductProperties = new()
+            {
+                new Demo_ProductProp { Id = 1, Key = "Flavor", Value = "Lily" },
+                new Demo_ProductProp { Id = 2, Key = "Size", Value = "18oz" },
+                new Demo_ProductProp {Id = 3,Key = "Color",Value = "White"}
+            }
+            });
+    }
 }
