--- a/eCommerceApp/eCommerceApp.WebUI/eCommerceApp.WebUI/Components/Pages/LearnBlazor/BindProp.razor
+++ b/eCommerceApp/eCommerceApp.WebUI/eCommerceApp.WebUI/Components/Pages/LearnBlazor/BindProp.razor
@@ -1,8 +1,8 @@
 ﻿@page "/learnBlazor/bindProp"
 @rendermode InteractiveServer
 
-<h2 class="text-success">Individual Product</h2>
 <div class="row">
+    <h2 class="text-success">Individual Product</h2>
     <div class="col-6 border p-3">
         <h3 class="text-primary">Product Playground</h3><hr />
         <div>
@@ -34,38 +34,39 @@
             <p> Property Value: @Product.ProductProperties.FirstOrDefault(p => p.Key == _selectedProp).Value </p>
         }
     </div>
-    <br />
-</div>
-<div class= "row my-5">
-    <h2 class="text-success">Product Table</h2>
-    <div class = "col-10 p-2">
-        <table class="g-2">
-            @foreach (var product in Products)
-            {
-                <tr>
-                    <td>
-                        <input @bind-value="@product.Name" @bind-value:event="oninput" />
-                    </td>
-                    <td>
-                        <input type="number" @bind-value="@product.Price" @bind-value:event="oninput" />
-                    </td>
-                    <td>
-                        <input type="checkbox" @bind-value="@product.IsActive" checked="@(product.IsActive?"checked":null)" />
-                    </td>
-                </tr>
-            }
-        </table>
-    </div>
-</div>
-<div class= "row my-5">
-    <h2 class="text-black">Product Summary</h2>
-    @foreach(var product in Products)
-    {
-        <p>
-            @product.Name @product.Price @(product.IsActive?"Is Active":"Is Inactive")
-        </p>
-    }
+    <br /><br />
 
+    <div class="col-12 pt-4">
+        <h2 class="text-success">Product Table</h2>
+        <table class="table table-striped">
+            <tbody>
+                @foreach (var product in Products)
+                {
+                    <tr>
+                        <td>
+                            <input type="text" @bind-value="@product.Name" @bind-value:event="oninput" />
+                        </td>
+                        <td>
+                            <input type="number" @bind-value="@product.Price" @bind-value:event="oninput" />
+                        </td>
+                        <td>
+                            <input type="checkbox" @bind-value="@product.IsActive" checked="@(product.IsActive?"checked":null)" />
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <br /><br />
+
+        <h2 class="text-black">Product Summary</h2>
+        @foreach (var product in Products)
+        {
+            <p>
+                @product.Name [@product.Price] is @(product.IsActive ? "Is Active" : "Is InActive")
+            </p>
+        }
+
+    </div>
 </div>
 
 
@@ -98,8 +99,8 @@
                 Price = 14.99,
                 ProductProperties = new()
                 {
-                new Demo_ProductProp { Id = 1, Key = "Flavor", Value = "Rose"},
-                     new Demo_ProductProp { Id = 2, Key = "Size", Value = "20oz"},
+                    new Demo_ProductProp { Id = 1, Key = "Flavor", Value = "Rose"},
+                    new Demo_ProductProp { Id = 2, Key = "Size", Value = "20oz"},
                     new Demo_ProductProp { Id = 3, Key = "Color", Value="Purple" }
                 }
             });
