--- a/eCommerceApp/eCommerceApp.WebUI/eCommerceApp.WebUI/Components/Pages/LearnBlazor/DemoProduct.razor
+++ b/eCommerceApp/eCommerceApp.WebUI/eCommerceApp.WebUI/Components/Pages/LearnBlazor/DemoProduct.razor
@@ -3,37 +3,43 @@
 
 
 <h2 class="text-success">DemoProduct</h2>
+<p> Favourite Total : @SelectedFavouriteCount</p><br />
+<p> Last Selected Product: @LastSelectedProductName</p>
+<br />
 <div class="row mt-2 p-2 border" style="background-color: azure">
 
     @foreach (var product in Products)
     {
-        <div class="bg-light border p-2 col-6">
-            <h4 class="text-secondary"> Product - @product.Id </h4>
-            <p>
-                Name - @product.Name
-            </p>
-            <p>
-                Show Properties: <input type="checkbox" @bind-value="@product.IsActive" checked="@(product.IsActive?"checked":null)" />
-            </p>
-            @if(product.IsActive)
-            {
-                @foreach (var property in product.ProductProperties)
-                {
-                    <p>
-                        @property.Key - @property.Value
-                    </p>
-                }
-            }
-            <br />
-            <_EditDeleteButton IsActive="@product.IsActive">
-            </_EditDeleteButton>
-        </div>
+        <_IndividualProduct Product="@product" OnFavouriteSelection="@FavouriteCountUpdate" OnLastSelectedProductChange="SelectedProductUpdate">
+
+        </_IndividualProduct>
     }
 </div>
 
 
 
 @code {
+    private string LastSelectedProductName { get; set; }
+
+    protected void SelectedProductUpdate(string productName)
+    {
+        LastSelectedProductName = productName;
+    }
+
+    private int SelectedFavouriteCount { get; set; } = 0;
+
+    protected void FavouriteCountUpdate(bool isSelected)
+    {
+        if (isSelected)
+        {
+            SelectedFavouriteCount++;
+        }
+        else
+        {
+            SelectedFavouriteCount--;
+        }
+    }
+
     List<Demo_Product> Products = new();
 
     protected override void OnInitialized()
